--- a/.github/workflows/docker-and-push-image.yml
+++ b/.github/workflows/docker-and-push-image.yml
@@ -21,6 +21,12 @@ jobs:
       uses: docker/setup-qemu-action@v2
     - name: Build and push Docker images
       uses: docker/build-push-action@v4.0.0
+    - name: Get tag
+      id: tag
+      uses: dawidd6/action-get-tag@v1
+      with:
+        # Optionally strip `v` prefix
+        strip_v: true
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
       with:
