--- a/.github/workflows/docker-and-push-image.yml
+++ b/.github/workflows/docker-and-push-image.yml
@@ -13,27 +13,13 @@ jobs:
       TZ: Asia/Shanghai
       TAG_NUMBER: $GITHUB_RUN_NUMBER
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-      with:
-        path: action
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v2
-    - name: Build and push Docker images
-      uses: docker/build-push-action@v4.0.0
+    - uses: actions/checkout@v3
     - name: Get tag
       id: tag
       uses: dawidd6/action-get-tag@v1
       with:
         # Optionally strip `v` prefix
         strip_v: true
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-      with:
-        version: ${{ inputs.buildx-version || env.BUILDX_VERSION }}
-        driver-opts: |
-          network=host
-          image=${{ inputs.buildkit-image || env.BUILDKIT_IMAGE }}
     - name: Build and push
       uses: docker/build-push-action@v4.0.0
       with:
