--- a/.github/workflows/docker-and-push-image.yml
+++ b/.github/workflows/docker-and-push-image.yml
@@ -14,21 +14,16 @@ jobs:
       TAG_NUMBER: $GITHUB_RUN_NUMBER
     steps:
     - uses: actions/checkout@v3
-    - uses: docker/setup-qemu-action@v2
-    - name: Build and push Docker images
-      uses: docker/build-push-action@v4.0.0
-    - name: Get tag
-      id: tag
-      uses: dawidd6/action-get-tag@v1
+    - uses: docker/build-push-action@v4.0.0
+    - uses: dawidd6/action-get-tag@v1
       with:
         # Optionally strip `v` prefix
         strip_v: true
-    - name: Build and push
-      uses: docker/build-push-action@v4.0.0
+    - uses: docker/build-push-action@v4.0.0
       with:
         context: ./
         file: ./dockerfile
-        platforms: linux/amd64,linux/arm64
+        platforms: linux/amd64
         push: true
         tags: |
           ${{ secrets.DOCKER_HUB_USERNAME }}/chatgpt-webapi:latest
