--- a/.github/workflows/docker-and-push-image.yml
+++ b/.github/workflows/docker-and-push-image.yml
@@ -14,18 +14,22 @@ jobs:
       TAG_NUMBER: $GITHUB_RUN_NUMBER
     steps:
     - uses: actions/checkout@v3
-    - uses: docker/setup-qemu-action@v1.2.0
-    - uses: docker/setup-buildx-action@v1.5.1
     - name: Get tag
       id: tag
       uses: dawidd6/action-get-tag@v1
       with:
         # Optionally strip `v` prefix
         strip_v: true
+    - uses: docker/setup-qemu-action@v1.2.0
+    - uses: docker/setup-buildx-action@v1.5.1
+    - uses: docker/login-action@v2.1.0
+      with:
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
     - uses: docker/build-push-action@v4.0.0
       with:
         context: ./
         file: ./dockerfile
-        platforms: linux/amd64
+        platforms: linux/amd64,linux/arm64
         push: true
         tags: ${{ secrets.DOCKER_HUB_USERNAME }}/chatgpt-webapi:latest,${{ secrets.DOCKER_HUB_USERNAME }}/chatgpt-webapi:${{steps.tag.outputs.tag}}
